--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,21 @@
+spring.jpa.hibernate.ddl-auto=update
 server.port=8080
-
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
+
+spring.datasource.url=jdbc:mysql://localhost:3306/feedback
+spring.datasource.username=trip
+spring.datasource.password=Trip@123
+spring.datasource.driver=com.mysql.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+server.error.whitelabel.enabled=false
+
+
+spring.jpa.show.sql=true
+spring.jpa.open-in-view=false
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
+logging.level.org.hibernate.SQL=debug
