--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
-spring.mvc.view.prefix=/WEB-INF/view/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/view/
+#spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/feedback
 spring.datasource.username=trip
@@ -14,7 +14,6 @@ server.error.whitelabel.enabled=false
 
 
 spring.jpa.show.sql=true
-spring.jpa.open-in-view=false
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout.seconds=900
