--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 #spring.mvc.view.suffix=.jsp
 
 spring.datasource.url=jdbc:mysql://localhost:3306/feedback
-spring.datasource.username=trip
-spring.datasource.password=Trip@123
+spring.datasource.username=aashi
+spring.datasource.password=AASHI2597
 spring.datasource.driver=com.mysql.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
